...
                        verticalArrangement = Arrangement.spacedBy(14.dp, Alignment.CenterVertically)) {
                    var isActive by rememberSaveable { mutableStateOf(true) }
                    var isOOO by rememberSaveable { mutableStateOf(false) }

                    Row(modifier = Modifier.fillMaxWidth(),
                            horizontalArrangement = Arrangement.spacedBy(10.dp, Alignment.CenterHorizontally)) {
                        Button(onClick = { isActive = !isActive }, text = "Toggle Activity")
                        Button(onClick = { isOOO = !isOOO }, text = "Toggle OOO")
                    }

                    Divider()

                    Row(modifier = Modifier.fillMaxWidth(),
                            horizontalArrangement = Arrangement.spacedBy(12.dp, Alignment.CenterHorizontally),
...
