...
        ))
    }
    private fun createPersonasList(scaffoldState: ScaffoldState, coroutineScope: CoroutineScope): List<Persona>{
        return arrayListOf(
            Persona(Person("Allan", "Munger",
                image = drawable.avatar_allan_munger, email = "allan.munger@microsoft.com", isActive = true,
                status = Available, isOOO = false), title = "Allan Munger", subTitle = "Manager", trailingIcon = { trailingIcon() }, onClick = { onClick("Allan Munger", coroutineScope, scaffoldState) }),
            Persona(Person("Amanda", "Brady",
                image = drawable.avatar_amanda_brady, email = "allan.munger@microsoft.com", isActive = true,
                status = Available, isOOO = false), title = "Amanda Brady", subTitle = "Researcher", trailingIcon = { trailingIcon() }, onClick = { onClick("Amanda Brady", coroutineScope, scaffoldState) }),
            Persona(Person("Ashley", "McCarthy",
                image = drawable.avatar_ashley_mccarthy, email = "allan.munger@microsoft.com", isActive = true,
                status = Available, isOOO = false), title = "Ashley McCarthy", subTitle = "Designer", trailingIcon = { trailingIcon() }, onClick = { onClick("Ashley McCarthy", coroutineScope, scaffoldState) }),
...
