...
    <string name="date_time_picker_date_time_range_title">Date Time Range</string>
    <!-- text for button that selects date time range -->
    <string name="date_time_picker_date_time_range_button">Select date time range</string>
    <!-- UI label -->
    <string name="date_time_picker_dialog_title">DateTimePickerDialog</string>
    <!-- text for button that shows picker dialog -->
    <string name="date_time_picker_dialog_button">Show Dialog</string>

    <!--Drawer-->
    <!-- text for button that shows drawer -->
    <string name="drawer_button">Show drawer</string>
    <!-- text for button that shows drawer dialog -->
    <string name="drawer_dialog_button">Show drawer dialog</string>
...
    <string name="dismiss_dialog_back">Dismiss dialog on back press</string>
    <!-- Text denoting a dialog is closed -->
    <string name="dismiss_dialog">Dialog dismissed</string>
    <!-- UI Label Cancel -->
    <string name="cancel">Cancel</string>
    <!-- UI Label Ok -->
    <string name="ok">Ok</string>
    <!-- A sample description -->
    <string name="dialog_description">A dialog is a small window that prompts the user to make a decision or enter additional information.</string>

    <!-- V2 Drawer -->
    <!-- UI Label for Button which open Drawer-->
    <string name="drawer_open">Open Drawer</string>
...
