...
    <string name="fluentui_dismiss_button">Dismiss</string>
    <!-- Describes enabled action-->
    <string name="fluentui_enabled">Enabled</string>
    <!-- Describes close action for a sheet-->
    <string name="fluentui_close_sheet">Close Sheet</string>
    <!-- Describes close action -->
    <string name="fluentui_close">Close</string>
    <!-- Describes cancel action -->
    <string name="fluentui_cancel">Cancel</string>
    <!--name of the icon -->
    <string name="fluentui_search">Search</string>
    <!--name of the icon -->
    <string name="fluentui_microphone">Microphone</string>
...
